[project]
name = "oc_meta"
version = "2.1.3"
description = "OpenCitations Meta contains bibliographic metadata associated with the documents involved in the citations stored in the OpenCitations infrastructure. The OpenCitations Meta Software performs two main actions: a data curation of the provided CSV files and the generation of new RDF files compliant with the OpenCitations Data Model."
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = "ISC"
authors = [
    {name = "Arcangelo Massari", email = "arcangelo.massari@unibo.it"},
]
dependencies = [
    "argparse>=1.4.0",
    "beautifulsoup4>=4.11.1",
    "fakeredis>=2.10.3",
    "filelock>=3.13",
    "ijson>=3.2.3",
    "internetarchive>=5.2.0",
    "lxml>=4.9.2,<6.0.0",
    "ndjson>=0.3.1",
    "numpy>=2.1.1",
    "oc-ds-converter>=1.0.4",
    "oc-ocdm>=9.4.3",
    "orjson>=3.10.7",
    "pandas>=2.2.3",
    "pebble>=5.0.3",
    "piccione>=2.1.0,<2.2.0",
    "psutil>=7.0.0",
    "python-dateutil>=2.8.2",
    "pyyaml>=6.0",
    "rdflib>=7.4.0",
    "rdflib-ocdm>=1.0.2",
    "requests>=2.27.1",
    "retrying>=1.3.4",
    "rich>=14.2.0",
    "sparqlite>=1.1.0",
    "time-agnostic-library>=5.0.7",
    "tqdm>=4.64.0",
    "virtuoso-utilities>=1.5.3",
    "zenodopy>=0.3.0",
    "zstandard>=0.21.0",
]

[dependency-groups]
dev = [
    "autopep8>=2.0.0",
    "coverage>=6.4.4",
    "coverage-badge>=1.1.0",
    "isort>=6.0.1",
    "langdetect>=1.0.9",
    "matplotlib>=3.10.7",
    "pycountry>=22.3.5",
    "pytest>=8.0.0",
    "requests-cache>=0.9.4",
    "scipy>=1.10.0,<2.0.0",
    "wget>=3.2",
]

[project.scripts]
test = "test.run_all_tests:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
