[project]
name = "oc_meta"
version = "2.1.3"
description = "OpenCitations Meta contains bibliographic metadata associated with the documents involved in the citations stored in the OpenCitations infrastructure. The OpenCitations Meta Software performs two main actions: a data curation of the provided CSV files and the generation of new RDF files compliant with the OpenCitations Data Model."
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = "ISC"
authors = [
    {name = "Arcangelo Massari", email = "arcangelo.massari@unibo.it"},
    {name = "Fabio Mariani"},
    {name = "Simone Persiani"},
    {name = "Silvio Peroni", email = "silvio.peroni@unibo.it"},
    {name = "Marta Soricetti"},
    {name = "Arianna Moretti"},
]
dependencies = [
    "beautifulsoup4>=4.14.0",
    "filelock>=3.24.0",
    "numpy>=2.2.0",
    "oc-ds-converter==2.0.1",
    "oc-ocdm==11.0.8",
    "orjson>=3.11.0",
    "pandas>=2.2.3",
    "piccione>=3.0.0",
    "polars>=1.39.3",
    "psutil>=7.2.0",
    "py7zr>=1.1.0",
    "python-dateutil>=2.9.0",
    "pyyaml>=6.0.3",
    "rdflib>=7.6.0",
    "requests>=2.32.0",
    "rich>=14.3.0",
    "rich-argparse>=1.7.2",
    "scandir-rs>=2.9.5",
    "time-agnostic-library>=7,<8",
    "tqdm>=4.67.3",
    "triplelite>=1.2.0",
    "virtuoso-utilities>=1.10.0",
]

[dependency-groups]
dev = [
    "autopep8>=2.0.0",
    "coverage>=6.4.4",
    "genbadge[coverage]>=1.1.3",
    "isort>=6.0.1",
    "langdetect>=1.0.9",
    "matplotlib>=3.10.7",
    "pycountry>=22.3.5",
    "pyright>=1.1.408",
    "pytest>=8.0.0",
    "requests-cache>=0.9.4",
    "reuse>=6.2.0",
    "ruff>=0.15.4",
    "scipy>=1.10.0,<2.0.0",
    "wget>=3.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

