[tool.poetry]
name = "oc_idmanager"
version = "0.2.6"
description = "This library allows validating identifiers with DOI, ISBN, ISSN, ORCID, PMCID, and PMID schemes"
authors = ["Silvio Peroni <essepuntato@gmail.com>", "Giuseppe Grieco <giuseppe.grieco3@unibo.it>", "Arianna Moretti <arianna.moretti4@unibo.it>", "Elia Rizzetto <elia.rizzetto@studio.unibo.it>", "Arcangelo Massari <arcangelo.massari@unibo.it>"]
license = "ISC"

[tool.poetry.dependencies]
python = "^3.8"
beautifulsoup4 = "^4.11.1"
requests = "^2.28.1"
lxml = "^4.9.1"
validators = "^0.20.0"
oc-meta = "1.2.4"

[tool.poetry.dev-dependencies]
coverage = "^6.4.4"
coverage-badge = "^1.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
